working with rendering

--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -116,13 +116,13 @@ GMT_filt <- GMT016 |>
          `OFL (mt)` = OFL,
          `ABC (mt)` = ABC,
          `ACL (mt)` = ACL)
-recent_management_table <- recent_management_table |>
-  full_join(try, by = c("Year")) |>
-  select(Year, `OFL (mt).y`, `ABC (mt).y`, `ACL (mt).y`, `Catch (mt)`) |>
-  rename(`OFL (mt)` = `OFL (mt).y`,
-         `ABC (mt)` = `ABC (mt).y`,
-         `ACL (mt)` = `ACL (mt).y`)
-recent_management_table <- round(recent_management_table)
+# recent_management_table <- recent_management_table |>
+#   full_join(try, by = c("Year")) |>
+#   select(Year, `OFL (mt).y`, `ABC (mt).y`, `ACL (mt).y`, `Catch (mt)`) |>
+#   rename(`OFL (mt)` = `OFL (mt).y`,
+#          `ABC (mt)` = `ABC (mt).y`,
+#          `ACL (mt)` = `ACL (mt).y`)
+# recent_management_table <- round(recent_management_table)
 
 
 projections_table[1:2, "Adopted OFL (mt)"] <- GMT016 |>
@@ -153,9 +153,9 @@ projections_table[1:2, "Adopted ACL (mt)"] <- GMT016 |>
 # 2002 - 2004 - dont have this in MT
 # 2005 - 2024 - use wa_rec_recfin_1990_2024_may
 
-wa_rec_recfin_1990_2024_may <- read.csv(file.path(getwd(), "Data", "raw", "nonconfidential", "CTE501_WA_1990_2024_may.csv"))
-
-# years we don't have MT for
+wa_rec_recfin_1990_2024_may <- read.csv("C:\\Morgan's Stuff\\Sebastes_ruberrimus_2025\\Data\\raw\\nonconfidential\\CTE501_WA_1990_2024_may.csv")
+# 
+# # years we don't have MT for
 mt_na <- data.frame(
   year = c(1967, 1968, 1969, 1970, 1971, 1972, 1973, 1974, 1979, 2002, 2003, 2004),
   catch = c(NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA)
@@ -184,18 +184,18 @@ all_wa_mt <- bind_rows(mt_na, mt_same_previous, mt_1990_2001, mt_2005_2024) |>
   arrange(year)|>
   rename(`7` = catch)
 
-catch_table <- inputs$dat$catch |>
-  dplyr::select(year, fleet, catch) |>
-  tidyr::pivot_wider(names_from = fleet, values_from = catch) |>
-  dplyr::filter(year > 1) |>
-  rename(`8` = `7`) |>
-  dplyr::full_join(all_wa_mt) |>
-  mutate(`7` = case_when(year < 1967 ~ 0,
-                         TRUE ~ `7`)) |>
-  select(year, `1`:`6`, `7`, `8`) |>
-  mutate(Total = round(rowSums(across(`1`:`7`), na.rm = TRUE), 3)) |>
-  mutate(`7` = case_when(is.na(`7`) ~ " - ",
-                         TRUE ~ `7`))
+ catch_table <- inputs$dat$catch |>
+   dplyr::select(year, fleet, catch) |>
+   tidyr::pivot_wider(names_from = fleet, values_from = catch) #|>
+#   dplyr::filter(year > 1) |>
+#   rename(`8` = `7`) |>
+#   dplyr::full_join(all_wa_mt) |>
+#   mutate(`7` = case_when(year < 1967 ~ 0,
+#                          TRUE ~ `7`)) |>
+#   select(year, `1`:`6`, `7`, `8`) |>
+#   mutate(Total = round(rowSums(across(`1`:`7`), na.rm = TRUE), 3)) |>
+#   mutate(`7` = case_when(is.na(`7`) ~ " - ",
+#                          TRUE ~ `7`))
 ```
 
 <!-- Create table for nwfsc survey hauls and save as rds file -->
