--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
@@ -224,8 +224,8 @@ cat(a, sep = '\n')
 #| eval: true
 #| echo: false
 #| warning: false
-a <- knitr::knit_child('01_executive_summary.qmd', quiet = TRUE)
-cat(a, sep = '\n')
+# a <- knitr::knit_child('01_executive_summary.qmd', quiet = TRUE)
+# cat(a, sep = '\n')
 ```
 
  {{< pagebreak >}} 
