--- a/report/sa4ss_glossaries.tex
+++ b/report/sa4ss_glossaries.tex
@@ -118,6 +118,7 @@
 \newacronym{idfg}{IDFG}{Idaho Department of Fish and Game}
 \newacronym{iea}{IEA}{Integrated Ecosystem Assessment}
 \newacronym{ifq}{IFQ}{individual fishing quota}
+\newacronym{indexwc}{WCGBTS}{West Coast Groundfish Bottom Trawl Survey}
 \newacronym{inpfc}{INPFC}{International North Pacific Fishery Commission}
 \newacronym{iphc}{IPHC}{International Pacific Halibut Commission}
 \newacronym{iq}{IQ}{individual quota}
