--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -51,7 +51,7 @@ Briefly, the Yelloweye Rockfish model is a coastwide, single-sex two-area model.
 
 ** ADW - update the code here to be sure we're getting the proper base model. also do we need any more fig's from the base? **
 
-The base model had `r sum(mod_out$parameters$Phase > 0)` estimated parameters (tallied by type in @tbl-table_parcounts). A single-sex growth curve was estimated (@fig-growth). Natural mortality was fixed, as in the 2017 assessment. Unfished recruitment and the distribution of recruits between areas are estimated. Steepness of the stock-recruit relationship was kept fixed at 0.718, matching the 2017 assessment. Estimating steepness was evaluated as a sensitivity. Recruitment deviations during the "main" period (from `r mod_in$ctl$MainRdevYrFirst` to `r mod_in$ctl$MainRdevYrLast`) were forced to sum to zero and the bias adjustment ranmp was updated (@fig-biasadj). 
+The base model had r sum(mod_out$ parameters $Phase > 0) estimated parameters (tallied by type in @tbl-table_parcounts). A single-sex growth curve was estimated (@fig-growth). Natural mortality was fixed, as in the 2017 assessment. Unfished recruitment and the distribution of recruits between areas are estimated. Steepness of the stock-recruit relationship was kept fixed at 0.718, matching the 2017 assessment. Estimating steepness was evaluated as a sensitivity. Recruitment deviations during the "main" period (from r mod_in$ctl$MainRdevYrFirst to r mod_in$ctl$MainRdevYrLast) were forced to sum to zero and the bias adjustment ranmp was updated (@fig-biasadj). 
 
 Length, age, and age-at-length composition data weights were tuned using the Francis method [@francis_data_2011, @tbl-table_compweight]. All selectivity was assumed to be length-based and used a double-normal functional form. Selectivities for all fleets was estimated to be asymptotic (@fig-selex_allfleets), though selectivity for the California Onboard Observer CPUE was mirrored to the California recreational fleet. Selectivity was constant through time. Dome-shaped selectivity and various time blocks for specific fleets were explored in @gertseva_stock_2017 but not re-evaluted in this update assessment.   
 
