--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -197,7 +197,7 @@
 \usepackage[headsepline=0.005pt:,footsepline=0.005pt:,plainfootsepline,automark]{scrlayer-scrpage}
 \clearpairofpagestyles
 \ohead[]{\headmark} \cofoot[\pagemark]{\pagemark}
-\lohead{Yellowtail rockfish assessment 2025}
+\lohead{Yelloweye Rockfish assessment 2025}
 \ModifyLayer[addvoffset=-.6ex]{scrheadings.foot.above.line}
 \ModifyLayer[addvoffset=-.6ex]{plain.scrheadings.foot.above.line}
 \setkomafont{pageheadfoot}{\small}
@@ -289,7 +289,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Status of Yelloweye rockfish off the U.S. West Coast in 2025},
-  pdfauthor={Morgan Johnston; Claire Rosemond; Elizabeth Perl; Alison Whitman; Matheus de Barros; Juliette Champagnat; Abby Schamp; Samantha Schiano},
+  pdfauthor={Morgan Johnston; R. Claire Rosemond; Elizabeth Perl; Alison Whitman; Matheus de Barros; Juliette Champagnat; Abby Schamp; Samantha Schiano; Fabio Prior Caltabellotta},
   pdflang={en},
   colorlinks=true,
   linkcolor={blue},
@@ -300,9 +300,10 @@
 
 
 \title{Status of Yelloweye rockfish off the U.S. West Coast in 2025}
-\author{Morgan Johnston \and Claire Rosemond \and Elizabeth
+\author{Morgan Johnston \and R. Claire Rosemond \and Elizabeth
 Perl \and Alison Whitman \and Matheus de Barros \and Juliette
-Champagnat \and Abby Schamp \and Samantha Schiano}
+Champagnat \and Abby Schamp \and Samantha Schiano \and Fabio Prior
+Caltabellotta}
 \date{2025-05-15}
 
 \begin{document}
@@ -338,7 +339,7 @@ Champagnat \and Abby Schamp \and Samantha Schiano}
   % Ross would change this to 2\baselineskip
 
   %%%%%% Cover image
-  \pdftooltip{\includegraphics[width=6in]{support\_files/Yelloweye\_Rockfish.png}}{An illustration of Yellowtail rockfish}
+  \pdftooltip{\includegraphics[width=6in]{support\_files/Yelloweye\_Rockfish.png}}{An illustration of Yelloweye Rockfish}
   % cover page customization need to be inserted here
   %\pdftooltip{\includegraphics{support\_files/Yelloweye\_Rockfish.png}}{Alt text}
 
@@ -350,7 +351,7 @@ Champagnat \and Abby Schamp \and Samantha Schiano}
    {\large{Morgan Johnston}}{\textsuperscript{1}}%
   %
   ,
-   {\large{Claire Rosemond}}{\textsuperscript{2}}%
+   {\large{R. Claire Rosemond}}{\textsuperscript{2}}%
   %
   ,
    {\large{Elizabeth Perl}}{\textsuperscript{3}}%
@@ -367,9 +368,12 @@ Champagnat \and Abby Schamp \and Samantha Schiano}
   ,
    {\large{Abby Schamp}}{\textsuperscript{5}}%
   %
+  ,
+   {\large{Samantha Schiano}}{\textsuperscript{6}}%
   %
-  { and \large{Samantha Schiano}}%
-  {\textsuperscript{6}}%
+  %
+  { and \large{Fabio Prior Caltabellotta}}%
+  {\textsuperscript{7}}%
   %
 
 
@@ -435,6 +439,15 @@ Champagnat \and Abby Schamp \and Samantha Schiano}
   , %
   {2750 Prosperity Ave \#600, Fairfax, VA, 22031}%
   %
+  \par\hangindent=1em\hangafter=1%
+  %
+  {7}.~{Washington Department of Fish and Wildlife}%
+  %
+  %
+  % Ross recommends putting address on one line
+  , %
+  {1111 Washington St SE, Olympia, WA, 98504-3150}%
+  %
 
 
   %%%%%% Correspondence
@@ -473,10 +486,10 @@ Champagnat \and Abby Schamp \and Samantha Schiano}
 
 Please cite this publication as:
 
-Johnston, M., Rosemond, C., Perl, E., Whitman, A., Barros, M.,
-Champagnat, J., Schamp, A., and Schiano, S. (2025) Status of Yelloweye
-rockfish off the U.S. West Coast in 2025. Pacific Fishery Management
-Council. {[}XX{]} p.
+Johnston, M., Rosemond, R. C., Perl, E., Whitman, A., Barros, M.,
+Champagnat, J., Schamp, A., Schiano, S., and Prior Caltabellotta, F.
+(2025) Status of Yelloweye rockfish off the U.S. West Coast in 2025.
+Pacific Fishery Management Council. {[}XX{]} p.
 
 \newpage{}
 
