--- a/report/support_files/_titlepage.tex
+++ b/report/support_files/_titlepage.tex
@@ -34,7 +34,7 @@ $if(subtitle)${\large{$subtitle$}}\\[4\baselineskip]$endif$
 
 %%%%%% Cover image
 $if(cover)$
-\pdftooltip{\includegraphics[width=6in]{$cover$}}{An illustration of Yellowtail rockfish}
+\pdftooltip{\includegraphics[width=6in]{$cover$}}{An illustration of Yelloweye Rockfish}
 % cover page customization need to be inserted here
 %\pdftooltip{\includegraphics{$cover$}}{Alt text}
 $endif$
